# simple-rust-micro-service

./: Cargo.toml  README.md
libs/request/: Cargo.toml
libs/request/src/: lib.rs
services/comments/: Cargo.toml
services/comments/src/: main.rs
services/event-bus/: Cargo.toml
services/event-bus/src/: main.rs
services/moderation/: .gitignore  Cargo.toml
services/moderation/src/: main.rs
services/posts/: Cargo.toml
services/posts/src/: main.rs
services/query/: Cargo.toml
services/query/src/: main.rs
shared/types/: Cargo.toml
shared/types/src/: lib.rs
