[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "services/posts",
    "services/query",
    "services/moderation",
    "services/event-bus",
    "services/comments",
    "libs/request",
    "shared/types",
]

[workspace.dependencies]
request = { path = "libs/request" }
types = { path = "shared/types" }

[lib]
name = "request"
path = "libs/request/src/lib.rs"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"]   }
uuid = { version = "1.8.0", features = ["v4"] }
