[package]
name = "query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.3"
serde_json = "1.0"
reqwest = { version = "0.12.2", features = ["json"] }
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
request = { workspace = true }
types = { workspace = true }
futures = "0.3.21"
tokio = { version = "1.37.0", features = ["full"] }